# mpi_manager

./: .gitignore  CMakeLists.txt  Doxyfile.in
include/: mpi_manager.hpp
include/mpi/: mpi.hpp  mpi_manager.hpp
include/mpi_manager/: mpi_manager.hpp
mpi/include/: mpi.hpp
mpi/include/mpi/: mpi.hpp  mpi_manager.hpp  serialise.hpp
mpi/test/: mpi_test.cpp
src/: CMakeLists.txt  mpi_manager.cpp
test/: CMakeLists.txt  mpi_test.cpp
